Navbar covering body fix

--- a/JudoMVC/Content/Site.css
+++ b/JudoMVC/Content/Site.css
@@ -33,3 +33,6 @@ textarea {
 body>.navbar-inverse {
     border: none;
 }
+.body-content {
+    padding-top: 60px;
+}
